# contractul

./: .env.example  .gitignore  Detaliu Contract.dc.html  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline.py  0002_add_users.py  0003_add_sessions.py  0004_add_catalog.py  0005_add_wallet.py  0006_add_orders.py  0007_add_companies.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: admin.py  auth.py  cart.py  health.py  orders.py  settings.py  templates.py  wallet.py
backend/app/core/: config.py  money.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/documents/: renderer.py
backend/app/integrations/payments/: base.py  mock.py
backend/app/integrations/storage/: base.py  local.py
backend/app/models/: __init__.py  cart.py  catalog.py  company.py  order.py  session.py  user.py  wallet.py
backend/app/schemas/: admin.py  auth.py  cart.py  catalog.py  health.py  order.py  settings.py  wallet.py
backend/app/services/: admin.py  auth.py  cards.py  cart.py  catalog.py  checkout.py  previews.py  settings.py  wallet.py
backend/scripts/: render_preview.py  seed.py
backend/tests/: conftest.py
backend/tests/fixtures/: activare-2fa.docx
backend/tests/integration/: factories.py  test_admin_api.py  test_auth_api.py  test_auth_service.py  test_cart_api.py  test_catalog_api.py  test_checkout.py  test_rate_limit_api.py  test_renderer.py  test_settings_api.py  test_user_model.py  test_wallet_api.py  test_wallet_service.py
backend/tests/unit/: test_app_imports.py  test_config.py  test_money.py  test_rate_limit.py  test_security.py  test_storage.py  test_user.py
docs/: README.md  architecture.md  data-model.md  development-setup.md  project-structure.md  roadmap.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx  test-setup.ts
frontend/src/app/: router.tsx
frontend/src/app/layouts/: AppShell.module.css  AppShell.tsx  BrowseLayout.module.css  BrowseLayout.tsx  PublicLayout.module.css  PublicLayout.tsx
frontend/src/features/admin/: AdminPage.module.css  AdminPage.tsx  api.ts
frontend/src/features/auth/: AuthContext.tsx  AuthPage.module.css  AuthPage.test.tsx  AuthPage.tsx  RequireAdmin.tsx  RequireAuth.tsx  api.ts
frontend/src/features/cart/: api.ts  (+5 more)
frontend/src/lib/: api-client.ts
frontend/src/styles/: global.css  tokens.css
(+24 files in other folders)
