[project]
name = "contractul-backend"
version = "0.1.0"
description = "Contracte.md API — Crowe Turcan Mikhailenko"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Document rendering. docxtpl fills Jinja-style placeholders in a .docx
    # while preserving Word formatting — the reason the legal team can own
    # templates without a developer.
    "docxtpl>=0.18",
    "pypdf>=5.1",
    # Password hashing. Argon2id is the current recommendation (OWASP, and the
    # Password Hashing Competition winner) — memory-hard, so a GPU farm gains
    # far less against it than against bcrypt or PBKDF2.
    "argon2-cffi>=23.1",
    # EmailStr validation.
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# The test database is created once per run, so the fixture that owns it must
# outlive any single test's event loop.
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
